--- a/katti/config.json
+++ b/katti/config.json
@@ -1,1 +1,1 @@
-{"solved": [], "history": [], "history_size": 100, "ids_last_updated": "2023-02-17 21:04:31.245476", "ratings_update_period": 72}
+{{"solved": [], "history": [], "history_size": 100, "ids_last_updated": "2023-02-17 21:04:31.245476", "ratings_update_period": 72}}
