--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,4 +29,8 @@ build-backend = "setuptools.build_meta"
 managed = true
 dev-dependencies = [
     "pytest>=8.1.1",
+    "mypy>=1.9.0",
+    "types-requests>=2.31.0.20240311",
+    "types-beautifulsoup4>=4.12.0.20240229",
+    "types-setuptools>=69.2.0.20240317",
 ]
